--- a/src/app/ad-info/ad-info.component.html
+++ b/src/app/ad-info/ad-info.component.html
@@ -1,7 +1,8 @@
-<div style="padding:20px;margin-top:30px;background-color:#f1f1f1;height:110px;">
-  <div style="display: flex; align-items: center;">
-    <img src="assets/infomind_logo.png" alt="Logo" style="width:200px; height:80px;">
-    <h2> Garden</h2>
+<div class="container">
+  <div class="header">
+    <img src="assets/infomind_logo.png" alt="Logo" class="logo">
+    <h2>Garden</h2>
+    <img src="assets/flowerbed.png" alt="Flowerbed" class="flowerbed">
   </div>
   <p>Zdalne zarządzanie działką rekreacyjną</p>
 </div>
